<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp">
    <TextView
        android:id="@+id/cone"
        android:text="@string/b1"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="101dp">
            <TextView
                android:text="@string/b2"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b01"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <ImageView
                android:src="@mipmap/ic01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/b01"
                android:layout_toEndOf="@+id/b01"
                android:id="@+id/imageView" />
            <TextView
                android:id="@+id/b02"
                android:text="@string/b3"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toEndOf="@+id/imageView" />
    </RelativeLayout>

    <ImageView
        android:src="@mipmap/ic02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/b4"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>