<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/e1"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />
        <TextView
        android:text="@string/e2"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:text="@string/e3"
            android:textSize="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic081"/>

        <ImageView
            android:layout_weight="1"
            android:src="@mipmap/ic071"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2" />

    </LinearLayout>

</LinearLayout>
